# unity-git-hooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
check_unity_meta_files/: __init__.py  check_unity_meta_files.py
check_unity_meta_files/util/: git.py
check_unity_meta_files/util/fs/: file.py  pathtree.py
hooks/: pre-commit
tests/: test_check_unity_meta_files.py  test_file.py  test_git_repository.py  test_pathtree.py  test_unity_git_repository.py
